src/test/ui/did_you_mean/issue-41679.stderr
error: `~` can not be used as a unary operator
  --> $DIR/issue-41679.rs:12:13
   |
LL |     let x = ~1; //~ ERROR can not be used as a unary operator
   |             ^ did you mean `!`?
   |
   = help: use `!` instead of `~` if you meant to perform bitwise negation

error: aborting due to previous error

